--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP JS Library</title>
     <script src="main.js" defer ></script>
+    <style>
+        html, body {
+            background: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     Hello there!
