--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP JS Library</title>
     <script src="main.js" defer ></script>
-    <style>
-        html, body {
-            background: black;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello there!
+    <div class="container">
+        <!-- Put book cards here --> 
+    </div>
+    <button>New Book</button>
+    <dialog></dialog>
 </body>
 </html>
