Add modal and initial styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <!-- Put book cards here --> 
     </div>
     <button>New Book</button>
-    <dialog></dialog>
+    <dialog class="modal" open>
+        <p>Hello there</p>
+    </dialog>
 </body>
 </html>
