--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     </div>
     <button>New Book</button>
     <dialog class="modal" open>
-        <p>Hello there</p>
+        <h1>New Book</h1>
+        <p class="description">Enter new book's details.</p>
+        <form action="#" method="post">
+            <div class="form-field">
+                <label for="author">Author</label>
+                <input id="author" name="author" type="text"/>
+            </div>
+            <div class="form-field">
+                <label for="title">Book Title</label>
+                <input id="title" name="title" type="text"/>
+            </div>
+            <div class="form-field">
+                <label for="pages">Number of Pages</label>
+                <input id="pages" type="text" name="pages" />
+            </div>
+        </form>
     </dialog>
 </body>
 </html>
+
