--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-        <!-- Put book cards here --> 
+    <div class="container">
+        <div class="card-container">
+            <!-- Put book cards here --> 
+        </div>
+        
+        <button class="newbook">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
+        </button>
+        <dialog class="modal" open>
+            <h1>New Book</h1>
+            <p class="description">Enter new book's details.</p>
+            <form action="#" method="post">
+                <div class="form-field">
+                    <label for="author">Author</label>
+                    <input id="author" name="author" type="text"/>
+                </div>
+                <div class="form-field">
+                    <label for="title">Book Title</label>
+                    <input id="title" name="title" type="text"/>
+                </div>
+                <div class="form-field">
+                    <label for="pages">Number of Pages</label>
+                    <input id="pages" type="text" name="pages" />
+                </div>
+            </form>
+        </dialog>
     </div>
-    <button>New Book</button>
-    <dialog class="modal" open>
-        <h1>New Book</h1>
-        <p class="description">Enter new book's details.</p>
-        <form action="#" method="post">
-            <div class="form-field">
-                <label for="author">Author</label>
-                <input id="author" name="author" type="text"/>
-            </div>
-            <div class="form-field">
-                <label for="title">Book Title</label>
-                <input id="title" name="title" type="text"/>
-            </div>
-            <div class="form-field">
-                <label for="pages">Number of Pages</label>
-                <input id="pages" type="text" name="pages" />
-            </div>
-        </form>
-    </dialog>
 </body>
 </html>
 
