Change modal backdrop colours and swap some variables into rgb triplets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <dialog class="modal" id="dialog">
 
-            <form>
+            <form method="dialog">
                 <div class="header">
                     <h1>New Book</h1>
                     <p class="description">Enter new book's details.</p>
