Small style edits to dialog

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="buttons">
                     <button type="submit">Save</button>
-                    <button id="cancel" type="reset">Close</button>
+                    <button id="cancel" type="reset">Cancel</button>
                 </div>
                 <div class="modal-corner">
                     <button class="close" type="submit" id="close" aria-label="close" formnovalidate>
