Get values from input form fields on Save button press

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
                 </div>
                 <div class="form-field">
                     <label for="title">Book Title</label>
-                    <input id="title" name="title" type="text"/>
+                    <input id="title" name="title" type="text" placeholder="The Comedy of Errors"/>
                 </div>
                 <div class="form-field">
                     <label for="author">Author</label>
-                    <input id="author" name="author" type="text"/>
+                    <input id="author" name="author" type="text" placeholder="William Shakespeare"/>
                 </div>
                 <div class="form-field">
                     <label for="pages">Number of Pages</label>
-                    <input id="pages" type="text" name="pages" />
+                    <input id="pages" type="text" name="pages" placeholder="232"/>
                 </div>
                 <div class="buttons">
-                    <button type="submit">Save</button>
+                    <button id="getDetails" type="submit">Save</button>
                     <button id="cancel" type="reset">Cancel</button>
                 </div>
                 <div class="modal-corner">
