Add checkbox variable for if book finished on newbook add

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                     <label for="pages">Number of Pages</label>
                     <input id="pages" type="text" name="pages" placeholder="232"/>
                 </div>
+                <div class="form-field">
+                    <label for="finished">Finished Reading</label>
+                    <input id="finished" type="checkbox" name="finished" />
+                </div>
                 <div class="buttons">
                     <button id="getDetails" type="submit">Save</button>
                     <button id="cancel" type="reset">Cancel</button>
