Attach id number to each book object and respective DOM element

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
         </dialog>
 
-        <div class="card-container">
+        <div id="cards" class="card-container">
             <!-- Put book cards here --> 
         </div>
         
