Rename finished to isRead, make modal bg solid
I realised that having a classname for finished and unfinished state is cumbersome.
There's great method to toggle a class, rather than specify between two.
Also changed CSS for modal bg colour to be solid instead of transluscent.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <input id="pages" type="text" name="pages" placeholder="232"/>
                 </div>
                 <div class="form-field">
-                    <label for="finished">Finished Reading</label>
-                    <input id="finished" type="checkbox" name="finished" />
+                    <label for="isRead">Finished Reading</label>
+                    <input id="isRead" type="checkbox" name="isRead" />
                 </div>
                 <div class="buttons">
                     <button id="getDetails" type="submit">Save</button>
